sunday commit before making into rest